Tried to fix overflow into footer of tasks to graph in graph picker

--- a/static/layout.css
+++ b/static/layout.css
@@ -221,3 +221,7 @@ a:nth-child(2) {
   font-size: 16px;
   color: #555;
 }
+
+#graph_tasks {
+  overflow:scroll;
+}
